Issue #26070: py.exe launcher fails to find in-place built binaries from earlier Python versions.